# Peerbench

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  HANDOFF.md  PLAN.md  README.md  pyproject.toml
.claude/agents/: design-critic.md  pipeline-validator.md  reviewer.md
.claude/commands/: review.md  validate-pipeline.md
.github/workflows/: daily-ingest.yml  weekly-backup.yml
data/: fdic_field_reference.csv  fdic_precomputed_ratios.csv  peers.toml  ratios.csv  statement_lines.csv
docs/: cdr-backfill.md  cdr-ingest.md  design.md  divergences.md  loom-script.md  operations.md  validation-snapshot.md
docs/ratios/: nim.md
scripts/: resolve_certs.py
sql/: schema.sql  seed_institution_names.sql
sql/migrations/: 0001_enable_rls.sql  0002_add_fk_indexes.sql  0003_v_ratios_with_data.sql  0004_statement_lines.sql
src/peerbench/: __init__.py  cli.py  config.py  decimal_.py  fdic_fields.py  peer_config.py  quarters.py  ratio_defs_io.py  validate.py
tests/contract/: handler_ast_snapshot.json  test_export_directions_mirror.py  test_export_methodology_completeness.py  test_ratio_registry.py  test_statement_lines_csv.py
tests/fixtures/: 4063_2025-q4_truth.json
tests/integration/: test_cli_export_latest.py  test_cli_upload_workbook.py  test_export_workbook.py  test_http_resilience.py  test_storage_client.py
tests/unit/: test_cdr_parser.py  test_cdr_schema.py  test_decimal_roundtrip.py  test_export_comp_sheet.py  test_export_cover.py  test_export_directions.py  test_export_format.py  test_export_methodology.py  test_export_quartile.py  test_export_restatement.py  test_export_summary.py  test_export_time_series.py  test_export_types.py  test_liquidity_handlers.py  test_peer_config.py  test_quality_log_callback.py  test_storage_manifest.py  test_validate.py
web/: .env.local.example  instrumentation-client.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: anchor-select.tsx  ratio-distribution.tsx  ratio-matrix.tsx  ratio-trend-chart.tsx  workbook-download.tsx
web/lib/: chart-tokens.ts  collapse.test.ts  collapse.ts  format.test.ts  format.ts  heatmap-directions.test.ts  heatmap-directions.ts  heatmap.test.ts  (+17 more)
(+51 files in other folders)
