[project]
name = "peerbench"
version = "0.1.0"
description = "Bank peer-benchmarking tool on FFIEC Call Report data, anchored on MidFirst Bank."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Connor Tipton" }]
license = { text = "MIT" }

dependencies = [
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.36",
    "pg8000>=1.31.0",
    "polars>=1.15.0",
    "openpyxl>=3.1.5",
    "typer>=0.13.0",
]

[project.scripts]
peerbench = "peerbench.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peerbench"]

[tool.hatch.build.targets.wheel.force-include]
"data/ratios.csv" = "peerbench/_data/ratios.csv"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long — formatter handles it
    "RUF001", # string literal "×" / "–" are intentional math/typographic notation
    "RUF002", # docstring "×" multiplication sign is intentional math notation
    "RUF003", # comment "×" multiplication sign is intentional math notation
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]  # pytest fixtures use non-snake_case

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.13"
reportMissingTypeStubs = false
reportUnknownMemberType = false  # SQLAlchemy 2.x types confuse pyright
reportUnknownVariableType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that hit the live Supabase or FDIC API",
    "contract: registry / schema contract tests",
]
